cert-manager/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
  name: nginx
spec:
  tls:
  - hosts:
    - example.cz
    # - www.example.com
    secretName: nginx-tls
  rules:
  - host: example.cz # nebo ["example.com", "www.example.com"]
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: nginx-deploy-main
            port: 
              number: 80
